<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/app_bar_custom"
        layout="@layout/app_bar_custom"></include>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.6"
            android:scaleType="centerCrop"
            android:src="@drawable/earth" />
    </LinearLayout>

    <TextView
        android:id="@+id/headerOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="bottom"
        android:text="@string/headerOptions"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.116"
        tools:text="Options" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:background="@drawable/general_rounded_border"
        android:elevation="10dp"
        android:padding="20dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.657">

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switchFrequency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/textSwitchButton"
            android:textOff="@string/option1SwitchButton"
            android:textOn="@string/option2SwitchButton"
            android:textSize="20sp"
            android:thumb="@drawable/sw_thumb"
            app:showText="true"
            app:track="@drawable/sw_track" />

        <Spinner
            android:id="@+id/spinnerCorrection"
            style="@style/customSpinnerStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:spinnerMode="dialog" />

    </RelativeLayout>

    <Button
        android:id="@+id/button2"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:elevation="10dp"
        android:text="@string/textMainButton"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.84" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:fillViewport="false"
        android:scrollbars="none"
        android:text="Options"
        android:textColor="@color/white"
        app:layout_anchorGravity="top|center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.27">

        <LinearLayout
            android:id="@+id/constellations"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:alpha="1"
            android:orientation="horizontal"
            android:textColor="@color/white" />
    </HorizontalScrollView>


</android.support.constraint.ConstraintLayout>