<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible">

    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/map"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        mapbox:layout_constraintBottom_toBottomOf="parent"
        mapbox:layout_constraintEnd_toEndOf="parent"
        mapbox:layout_constraintStart_toStartOf="parent"
        mapbox:layout_constraintTop_toTopOf="parent"
        mapbox:mapbox_cameraTargetLat="40.416775"
        mapbox:mapbox_cameraTargetLng="-3.703790"
        mapbox:mapbox_cameraZoom="11">

    </com.mapbox.mapboxsdk.maps.MapView>

    <ImageButton
        android:id="@+id/selectConstellation"
        style="@android:style/Widget.Material.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:background="@null"
        android:contentDescription="@string/constellation_selection"
        android:elevation="4dp"
        mapbox:layout_constraintStart_toStartOf="parent"
        mapbox:layout_constraintTop_toTopOf="parent"
        mapbox:srcCompat="@drawable/ic_select_constellation" />

    <ImageButton
        android:id="@+id/selectLayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:background="@null"
        android:contentDescription="@string/layer_selection"
        android:elevation="4dp"
        android:src="@drawable/ic_select_layer"
        mapbox:layout_constraintStart_toStartOf="parent"
        mapbox:layout_constraintTop_toBottomOf="@+id/selectConstellation" />

    <ImageButton
        android:id="@+id/getLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/get_location"
        android:elevation="4dp"
        android:background="@null"
        mapbox:layout_constraintBottom_toBottomOf="parent"
        mapbox:layout_constraintEnd_toEndOf="parent"
        mapbox:srcCompat="@drawable/ic_get_position" />

</android.support.constraint.ConstraintLayout>